--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.0.0",
+    "@angular/cdk": "^12.2.13",
     "@angular/common": "^19.0.0",
     "@angular/compiler": "^19.0.0",
     "@angular/core": "^19.0.0",
@@ -18,7 +19,16 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "bootstrap": "^5.3.3",
     "rxjs": "~7.8.0",
+    "survey-analytics": "^1.12.20",
+    "survey-angular": "^1.12.19",
+    "survey-angular-ui": "^1.12.19",
+    "survey-core": "^1.12.19",
+    "survey-creator": "^1.12.19",
+    "survey-creator-angular": "^1.12.19",
+    "survey-creator-core": "^1.12.19",
+    "survey-pdf": "^1.12.20",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -27,6 +37,7 @@
     "@angular/cli": "^19.0.5",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/plotly.js-dist-min": "^2.3.4",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
